@@ -3,3 +3,4 @@ mobac.mapsources.mappacks.region_america_north.TerraserverUSA
 mobac.mapsources.mappacks.region_america_north.AeroChartsIFR
 mobac.mapsources.mappacks.region_america_north.AeroChartsIFRH
 mobac.mapsources.mappacks.region_america_north.AeroChartsVFR
+mobac.mapsources.mappacks.region_america_north.CanadaToporama
